@@ -3,6 +3,10 @@ Changelog
 
 ## NEXT_RELEASE (minor release)
 
+- added BatList.favg and faster BatList.fsum
+  #746
+  (Gabriel Scherer, Francois Berenger)
+
 - install .cmt and .cmti files
   #740
   (Francois Berenger, Gabriel Scherer)
